k8s/consul/consul-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: consul-gateway
  namespace: consul
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consul
  namespace: consul
spec:
  hosts:
  - "*"
  gateways:
  - consul-gateway
  http:
  - match:
    - uri:
        prefix: /consul
    route:
    - destination:
        host: consul-ui
        port:
          number: 8500
